docs/1.0.2/_sources/api/gammapy.astro.population.CaseBattacharya1998.rst.txt
CaseBattacharya1998
===================

.. currentmodule:: gammapy.astro.population

.. autoclass:: CaseBattacharya1998
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~CaseBattacharya1998.alpha
      ~CaseBattacharya1998.amplitude
      ~CaseBattacharya1998.bbox_with_units
      ~CaseBattacharya1998.beta
      ~CaseBattacharya1998.bounding_box
      ~CaseBattacharya1998.bounds
      ~CaseBattacharya1998.col_fit_deriv
      ~CaseBattacharya1998.cov_matrix
      ~CaseBattacharya1998.eqcons
      ~CaseBattacharya1998.evolved
      ~CaseBattacharya1998.fit_deriv
      ~CaseBattacharya1998.fittable
      ~CaseBattacharya1998.fixed
      ~CaseBattacharya1998.has_user_bounding_box
      ~CaseBattacharya1998.has_user_inverse
      ~CaseBattacharya1998.ineqcons
      ~CaseBattacharya1998.input_units
      ~CaseBattacharya1998.input_units_allow_dimensionless
      ~CaseBattacharya1998.input_units_equivalencies
      ~CaseBattacharya1998.input_units_strict
      ~CaseBattacharya1998.inputs
      ~CaseBattacharya1998.inverse
      ~CaseBattacharya1998.linear
      ~CaseBattacharya1998.meta
      ~CaseBattacharya1998.model_constraints
      ~CaseBattacharya1998.model_set_axis
      ~CaseBattacharya1998.n_inputs
      ~CaseBattacharya1998.n_outputs
      ~CaseBattacharya1998.n_submodels
      ~CaseBattacharya1998.name
      ~CaseBattacharya1998.outputs
      ~CaseBattacharya1998.param_names
      ~CaseBattacharya1998.param_sets
      ~CaseBattacharya1998.parameter_constraints
      ~CaseBattacharya1998.parameters
      ~CaseBattacharya1998.return_units
      ~CaseBattacharya1998.separable
      ~CaseBattacharya1998.standard_broadcasting
      ~CaseBattacharya1998.stds
      ~CaseBattacharya1998.sync_constraints
      ~CaseBattacharya1998.tied
      ~CaseBattacharya1998.uses_quantity

   .. rubric:: Methods Summary

   .. autosummary::

      ~CaseBattacharya1998.__call__
      ~CaseBattacharya1998.coerce_units
      ~CaseBattacharya1998.copy
      ~CaseBattacharya1998.deepcopy
      ~CaseBattacharya1998.evaluate
      ~CaseBattacharya1998.get_bounding_box
      ~CaseBattacharya1998.has_inverse
      ~CaseBattacharya1998.input_shape
      ~CaseBattacharya1998.output_units
      ~CaseBattacharya1998.prepare_inputs
      ~CaseBattacharya1998.prepare_outputs
      ~CaseBattacharya1998.rename
      ~CaseBattacharya1998.render
      ~CaseBattacharya1998.set_slice_args
      ~CaseBattacharya1998.strip_units_from_tree
      ~CaseBattacharya1998.sum_of_implicit_terms
      ~CaseBattacharya1998.with_units_from_data
      ~CaseBattacharya1998.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: amplitude
   .. autoattribute:: bbox_with_units
   .. autoattribute:: beta
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: cov_matrix
   .. autoattribute:: eqcons
   .. autoattribute:: evolved
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: n_submodels
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: stds
   .. autoattribute:: sync_constraints
   .. autoattribute:: tied
   .. autoattribute:: uses_quantity

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: coerce_units
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: get_bounding_box
   .. automethod:: has_inverse
   .. automethod:: input_shape
   .. automethod:: output_units
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: set_slice_args
   .. automethod:: strip_units_from_tree
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
